--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "8.9.4"
+    "npm": "5.6.x"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
