--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "engines": {
     "node": "8.9.4"
-    
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
+    "mongodb": "^3.0.5",
     "morgan": "^1.7.0"
   }
 }
